--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
-  min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0;
+  }
 }
 
 * {
